Moved packages for versions-specific code into an interface system.  This allows for the same core code, but different interfaces.